@@ -1,0 +1,99 @@
+name: Memory leak checker
+on: [push]
+permissions:
+  contents: read
+defaults:
+  run:
+    shell: bash
+jobs:
+  build:
+    runs-on: ubuntu-24.04
+    timeout-minutes: 10
+    steps:
+
+      - name: Checkout Tcl
+        uses: actions/checkout@v4
+        with:
+          repository: tcltk/tcl
+          ref: core-8-6-14
+          path: tcl
+      - name: Configure Tcl
+        working-directory: tcl/unix
+        run: |
+          ./configure --enable-symbols=all --prefix=$HOME/tcl_install || {
+            cat config.log
+            echo "::error::Failure during Configure Tcl"
+            exit 1
+          }
+      - name: Build Tcl
+        working-directory: tcl/unix
+        run: |
+          make -j || {
+            echo "::error::Failure during Build Tcl"
+            exit 1
+          }
+      - name: Install Tcl
+        working-directory: tcl/unix
+        run: |
+          make install || {
+            echo "::error::Failure during Install Tcl"
+            exit 1
+          }
+
+      - name: Checkout tclvfs
+        uses: actions/checkout@v4
+        with:
+          repository: chpock/tclvfs
+          ref: main
+          path: tclvfs
+      - name: Setup environment for tclvfs
+        working-directory: tclvfs
+        run: |
+          curl https://core.tcl-lang.org/tclconfig/tarball/main/tclconfig.tar.gz >tclconfig.tar.gz
+          tar xfz tclconfig.tar.gz
+      - name: Configure tclvfs
+        working-directory: tclvfs
+        run: |
+          ./configure --enable-symbols=all --with-tcl=$HOME/tcl_install/lib --prefix=$HOME/tcl_install --exec-prefix=$HOME/tcl_install || {
+            cat config.log
+            echo "::error::Failure during Configure tclvfs"
+            exit 1
+          }
+      - name: Build tclvfs
+        working-directory: tclvfs
+        run: |
+          make -j || {
+            echo "::error::Failure during Build tclvfs"
+            exit 1
+          }
+      - name: Install tclvfs
+        working-directory: tclvfs
+        run: |
+          make install || {
+            echo "::error::Failure during Install tclvfs"
+            exit 1
+          }
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: Configure
+        run: |
+          ./configure --enable-symbols=all --with-tcl=$HOME/tcl_install/lib || {
+            cat config.log
+            echo "::error::Failure during Configure"
+            exit 1
+          }
+      - name: Build
+        run: |
+          make -j || {
+            echo "::error::Failure during Build"
+            exit 1
+          }
+      - name: Run Tests
+        run: |
+          MEMDEBUG=1 make test || {
+            echo "::error::Failure during Test"
+            exit 1
+          }
